--- a/index.html
+++ b/index.html
@@ -750,8 +750,7 @@
       // API Configuration
       const API_KEY = 'AIzaSyB2VvnIJm03Zeiw5KsQcHleArv0VhD55Jg';
       const MODEL_NAME = 'gemini-pro';
-      const API_URL = `https://generativelanguage.googleapis.com/v1beta/models/${MODEL_NAME}:generateContent?key=${API_KEY}`;
-      
+      const API_URL = `https://generativelanguage.googleapis.com/v1/models/gemini-2.0-flash:generateContent?key=YOUR_API_KEY`;
       // App State
       let currentMode = 'pacar-tsundere';
       let conversationHistory = [];
