--- a/index.html
+++ b/index.html
@@ -839,24 +839,26 @@
           
           // Prepare conversation history
           const contents = {
-            contents: [
-              {
-                parts: [{ text: systemPrompt }]
-              },
-              ...conversationHistory.slice(-10).map(msg => ({
-                parts: [{ text: msg.text }]
-              })),
-              {
-                parts: [{ text: userMessageText }]
-              }
-            ],
-            generationConfig: {
-              temperature: 0.9,
-              topP: 0.1,
-              topK: 16
-            }
-          };
-
+  contents: [
+    {
+      role: "user",
+      parts: [{ text: systemPrompt }]
+    },
+    ...conversationHistory.slice(-10).map(msg => ({
+      role: msg.sender === 'user' ? 'user' : 'model',
+      parts: [{ text: msg.text }]
+    })),
+    {
+      role: "user",
+      parts: [{ text: userMessageText }]
+    }
+  ],
+  generationConfig: {
+    temperature: 0.9,
+    topP: 0.1,
+    topK: 16
+  }
+};
           const response = await fetch(API_URL, {
             method: 'POST',
             headers: { 
